# configdiff

./: .gitignore  CONTRIBUTING.md  README.md  README_zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
configdiff/: __init__.py  cli.py  core.py  engines.py  formatters.py  types.py
examples/: config_dev.yaml  config_prod.yaml  env_dev  env_prod
tests/: test_configdiff.py
